🐕‍🦺 Implement silent error on statestore directory deletion  (#76)
* 🐕‍🦺 Implement silent error on statestore directory deletion failure when running tests in parrallel

* 🐕‍🦺 Update Path access to Java 11+